2005-09-08 Ian Rutt
 * Minor cosmetic changes
 * Improved ability to plug in emb mass-balance scheme without altering code

2005-09-07 Ian Rutt
 * Various enhancements and corrections to mass-balance masking in glint
 * Removed illegal elementals (glint_global_grid.f90) and unnecessary
   pures
 * Fixed segfault array allocation bug (glint.f90)
 * Changes to glint.f90 to aid readability (some structural, some
   formatting)
 * Substantial reformatting and tidying up of glint_*.f90 code
	
2005-08-24 Ian Rutt
 * Updated with improvements from GENIE development:
	- Sigma levels from config file if desired
	- Longer message variables in some places
	- Land tiling of ice, snow and veg fracs in glint output
	- Simplified output calculation in glint
	- Removed some unused variables
	- minor adjustments to daily pdd scheme and coupling
	- better ordering for glint timestep

2005-08-12 Magnus Hagdorn
 * glimmer_ncio.f90: made comparison between two floats more robust

2005-08-02 Ian Rutt
 * Fixed really obvious bug in glimmer_daily_pdd.f90

2005-07-13 Magnus Hagdorn
 * glimmer_ts.f90: fixed bug where the BC of linear interpolator
   were not correctly implemented

2005-06-28 Magnus Hagdorn
 * glimmer.bib: added bibtex database
 * glimmer.tex: use bibtex
 * num.tex: ditto
 * definitions.tex: ditto
 * packages.tex: ditto
 * grid.tex, kinematics.tex: add some references
 * configure.in, Makefile.am: hook up bibtex

2005-06-24 Magnus Hagdorn
 * configure.in: added detection of Intel and gcc f95 compiler

2005-06-24 Magnus Hagdorn
 * configure.in: detect which f95 compiler is used and set some flags
   accordingly
 * INSTALL: also mention SUN f95 compiler

2005-06-15 Ian Rutt
 * Corrected documentation error in annual pdd scheme

2005-06-08 Magnus Hagdorn
 * glide_thck.f90: fixed bug #132, extreme velos.

2005-05-18 Ian Rutt
 * Bug-fix changes to couple to Energy-balance mass-balance model
 * Added instantaneous outputting of mass-balance coupling fields,